# ComfyUI-Model-Batch-Downloader

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_ja.md  __init__.py  pyproject.toml
.github/workflows/: publish_action.yml
model_batch_downloader/: __init__.py  aria2_runner.py  loaders.py  manifest.py  nodes.py  progress.py  resolution.py  routes.py  security.py
tests/: conftest.py  test_aria2_runner.py  test_aria2_smoke.py  test_loaders.py  test_manifest.py  test_nodes.py  test_progress.py  test_registration.py  test_repository_metadata.py  test_resolution.py  test_routes.py
tests-js/: manifest_state.test.mjs  widget_layout.test.mjs
web/: manifest_state.js  model_batch_downloader.js  widget_layout.js
